--- a/reset.css
+++ b/reset.css
@@ -2,6 +2,7 @@
 
 html {
     box-sizing: border-box;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
 }
 
@@ -24,6 +25,8 @@ ul,
 dl,
 dt,
 dd,
+input,
+label,
 blockquote,
 figure,
 fieldset,
